[metadata]
name = sqlalchemy2-stubs
version = 0.0.2a29
description = Typing Stubs for SQLAlchemy 1.4
long_description = file: README.rst
long_description_content_type = text/x-rst
url = http://www.sqlalchemy.org
author = Mike Bayer
author_email = mike_mp@zzzcomputing.com
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
project_urls =
    Issue Tracker=https://github.com/sqlalchemy/sqlalchemy2-stubs/

[options]
python_requires = >=3.6

install_requires =
    typing-extensions>=3.7.4

[options.data_files]

[mypy]
incremental = True
strict = True
warn_unused_ignores = False
show_error_codes = True
plugins = sqlalchemy.ext.mypy.plugin


[flake8]
show-source = false
enable-extensions = G

ignore =
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    F401,
    W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = sqlalchemy,test,sqlalchemy-stubs
per-file-ignores =
    *.pyi: F403, F405, F811, E127, E128, E266, E301, E302, E501, E701, E704, E741, B303
